RESOLVED FIXED105235
Can't visit sites with untrusted certs with the NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=105235
Summary Can't visit sites with untrusted certs with the NetworkProcess
Brady Eidson
Reported 2012-12-17 17:53:52 PST
Can't visit sites with untrusted certs with the NetworkProcess. We need to expose API to allow telling the network layer to temporary accept an untrusted cert. In radar as <rdar://problem/12885641>
Attachments
Patch v1 - Add SPI to support this. (7.00 KB, patch)
2012-12-17 18:00 PST, Brady Eidson
sam: review+
Brady Eidson
Comment 1 2012-12-17 18:00:01 PST
Created attachment 179843 [details] Patch v1 - Add SPI to support this.
Brady Eidson
Comment 2 2012-12-17 18:23:57 PST
Ryosuke Niwa
Comment 3 2012-12-17 19:28:38 PST
This patch broke Mac builds: http://build.webkit.org/builders/Apple%20Lion%20Release%20%28Build%29/builds/7897/steps/compile-webkit/logs/stdio /Volumes/Data/slave/lion-release/build/Source/WebKit2/NetworkProcess/mac/NetworkProcessMac.mm:34:9: fatal error: 'Foundation/NSURLRequestPrivate.h' file not found #import <Foundation/NSURLRequestPrivate.h> ^ 1 error generated.
Alexey Proskuryakov
Comment 4 2012-12-17 21:01:06 PST
Comment on attachment 179843 [details] Patch v1 - Add SPI to support this. View in context: https://bugs.webkit.org/attachment.cgi?id=179843&action=review > Source/WebKit2/NetworkProcess/mac/NetworkProcessMac.mm:118 > + [NSURLRequest setAllowsSpecificHTTPSCertificate:(NSArray *)certificateInfo.certificateChain() forHost:(NSString *)host]; I would add a USE(CFNETWORK) block with an #error.
Note You need to log in before you can comment on or make changes to this bug.